Added some few example of Value Objects

--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,10 @@
             "email": "sensorario@gmail.com"
         }
     ],
+    "autoload": {
+        "classmap": [
+            "src/"
+        ]
+    },
     "minimum-stability": "dev"
 }
