--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "sensorario/value-object",
     "minimum-stability": "dev",
     "description": "A Value Object Implementation in PHP",
+    "version": "0.1.4",
     "authors": [
         {
             "name": "Simone Gentili",
