Remove waste from code: useless files and commend
The real documentation is the code

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "sensorario/value-object",
     "minimum-stability": "dev",
-    "description": "A Value Object Implementation in PHP",
+    "description": "A Value Object Implementation in PHP?",
     "version": "1.0",
     "authors": [
         {
@@ -16,7 +16,6 @@
         ]
     },
     "require-dev": {
-        "phpunit/phpunit": "@dev",
-        "phpdocumentor/phpdocumentor": "@dev"
+        "phpunit/phpunit": "@dev"
     }
 }
