--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "3.0"
+            "dev-master": "3.0-dev"
         }
     }
 }
