Fix name in composer.json file

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sensorario/value-object",
+    "name": "sensorario/resources",
     "minimum-stability": "dev",
     "description": "A tool for api resources management",
     "authors": [
