fix php version in composer

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
             "test/"
         ]
     },
+    "require": {
+        "php": ">=5.6.0"
+    },
     "require-dev": {
         "phpunit/phpunit": "@dev"
     },
