--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         ]
     },
     "require": {
-        "php": ">=5.6.0"
+        "php": ">=5.6.0",
+        "egulias/email-validator": "~2.1"
     },
     "require-dev": {
         "phpunit/phpunit": "@dev"
