--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "sensorario/resources",
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "description": "A tool for api resources management",
     "authors": [
         {
@@ -18,7 +18,7 @@
         ]
     },
     "require": {
-        "php": ">=5.6.0",
+        "php": ">=7.0.0",
         "egulias/email-validator": "~2.1"
     },
     "require-dev": {
@@ -26,7 +26,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "4.4-dev"
+            "dev-master": "5.0-dev"
         }
     }
 }
