--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,9 @@
     ],
     "license": "MIT",
     "autoload": {
-        "classmap": [
-            "src/",
-            "test/"
-        ]
+        "psr-4": {
+            "": ["src/", "tests/"]
+        }
     },
     "require": {
         "php": ">=7.0.0",
