upgrade phpunit version

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "egulias/email-validator": "~2.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "@dev"
+        "phpunit/phpunit": "^6.0"
     },
     "extra": {
         "branch-alias": {
