--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -2,3 +2,10 @@ build:
     environment:
         php:
             version: 7.0.7
+    tests:
+        override:
+            -
+                command: 'vendor/bin/phpunit --coverage-clover=some-file'
+                coverage:
+                    file: 'some-file'
+                    format: 'clover'
