--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,8 +5,7 @@ jobs:
     docker:
       - image: php:7.1-apache
     steps:
-      - run: apt-get update && apt-get -y install git
-      - checkout
+      - run: apt-get update && apt-get install php7-intl && apt-get -y install git
       - run:
           name: Install Composer
           command: |
