--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,8 @@ jobs:
     docker:
       - image: php:7.1-apache
     steps:
-      - run: apt-get update && apt-get install php7-intl && apt-get -y install git
+      - run: apt-get update && apt-get -y install git
+      - run: apt-get install -y zlib1g-dev libicu-dev g++ && docker-php-ext-configure intl && docker-php-ext-install intl
       - run:
           name: Install Composer
           command: |
